--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -25,6 +25,7 @@ jobs:
           - name: Update Toolchain
             shell: bash
             run: |
+                eval "$(/opt/homebrew/bin/brew shellenv)"
                 brew update
                 brew install ninja cmake
 
@@ -62,6 +63,7 @@ jobs:
           - name: Update Toolchain
             shell: bash
             run: |
+                eval "$(/opt/homebrew/bin/brew shellenv)"
                 brew update
                 brew install ninja cmake
 
