--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -33,16 +33,26 @@ jobs:
             run: |
                 git clone https://github.com/llvm/llvm-project --depth 1 --branch release/${{inputs.llvmMajor}}.x
 
-          - name: Build LLVM ${{inputs.llvmMajor}}
-            shell: pwsh
+          - name: Configure LLVM ${{inputs.llvmMajor}}
+            shell: bash
             run: |
                 cd llvm-project
                 cmake -S llvm -B build -G Ninja -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_INSTALL_PREFIX="$PWD/install" -DLLVM_ENABLE_PROJECTS="clang;lld" -DLLVM_ENABLE_TERMINFO=OFF -DLLVM_ENABLE_ZLIB=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_TOOLS=ON -DLLVM_INCLUDE_UTILS=OFF -DLLVM_OPTIMIZED_TABLEGEN=ON -DLLVM_TARGETS_TO_BUILD="X86;AArch64" -DLLVM_INCLUDE_BENCHMARKS=OFF
+
+          - name: Build LLVM ${{inputs.llvmMajor}}
+            shell: bash
+            run: |
+                cd llvm-project
                 cmake --build build --config MinSizeRel --parallel
+
+          - name: Install LLVM ${{inputs.llvmMajor}}
+            shell: bash
+            run: |
+                cd llvm-project
                 cmake --install build --config MinSizeRel
 
           - name: Compress Product
-            shell: pwsh
+            shell: bash
             run: |
                 7z a llvm_linux_x64.7z ./install/*
 
@@ -69,26 +79,37 @@ jobs:
             run: |
                 git clone https://github.com/llvm/llvm-project --depth 1 --branch release/${{inputs.llvmMajor}}.x
 
-          - name: Build host (x64) tblgen tools
+          - name: Build Host (x64) Tblgen
             shell: bash
             run: |
                 cd llvm-project
                 cmake -S llvm -B build-host -G Ninja -DCMAKE_BUILD_TYPE=Release -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_ENABLE_PROJECTS="clang"
                 cmake --build build-host --target llvm-tblgen clang-tblgen llvm-min-tblgen --config Release --parallel
 
+          - name: Configure LLVM ${{inputs.llvmMajor}}
+            shell: bash
+            run: |
+                cd llvm-project
+                mkdir build
+                cmake -S llvm -B build -G Ninja -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_INSTALL_PREFIX="$PWD/install" -DCMAKE_SYSTEM_NAME=Linux -DCMAKE_SYSTEM_PROCESSOR=aarch64 -DLLVM_ENABLE_PROJECTS="clang;lld" -DLLVM_ENABLE_TERMINFO=OFF -DLLVM_ENABLE_ZLIB=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_TOOLS=ON -DLLVM_INCLUDE_UTILS=OFF -DLLVM_OPTIMIZED_TABLEGEN=ON -DLLVM_TARGETS_TO_BUILD="X86;AArch64" -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_NATIVE_TOOL_DIR="$PWD/llvm-project/build-host/bin"
+
+
           - name: Build LLVM ${{inputs.llvmMajor}}
-            shell: pwsh
+            shell: bash
             env:
                 CC: aarch64-linux-gnu-gcc
                 CXX: aarch64-linux-gnu-g++
             run: |
                 cd llvm-project
-                cmake -S llvm -B build -G Ninja -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_INSTALL_PREFIX="$PWD/install" -DCMAKE_SYSTEM_NAME=Linux -DCMAKE_SYSTEM_PROCESSOR=aarch64 -DLLVM_ENABLE_PROJECTS="clang;lld" -DLLVM_ENABLE_TERMINFO=OFF -DLLVM_ENABLE_ZLIB=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_TOOLS=ON -DLLVM_INCLUDE_UTILS=OFF -DLLVM_OPTIMIZED_TABLEGEN=ON -DLLVM_TARGETS_TO_BUILD="X86;AArch64" -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_NATIVE_TOOL_DIR="$PWD/llvm-project/build-host/bin"
                 cmake --build build --config MinSizeRel --parallel
+
+          - name: Install LLVM ${{inputs.llvmMajor}}
+            shell: bash
+            run: |
                 cmake --install build --config MinSizeRel
 
           - name: Compress Product
-            shell: pwsh
+            shell: bash
             run: |
                 7z a llvm_linux_arm64.7z ./install/*
 
