--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -93,7 +93,6 @@ jobs:
                 CXX: aarch64-linux-gnu-g++
             run: |
                 cd llvm-project
-                mkdir build
                 cmake -S llvm -B build -G Ninja -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_INSTALL_PREFIX="$PWD/install" -DCMAKE_SYSTEM_NAME=Linux -DCMAKE_SYSTEM_PROCESSOR=aarch64 -DLLVM_ENABLE_PROJECTS="clang;lld" -DLLVM_ENABLE_TERMINFO=OFF -DLLVM_ENABLE_ZLIB=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_TOOLS=ON -DLLVM_INCLUDE_UTILS=OFF -DLLVM_OPTIMIZED_TABLEGEN=ON -DLLVM_TARGETS_TO_BUILD="X86;AArch64" -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_NATIVE_TOOL_DIR="$PWD/build-host/bin"
 
 
@@ -109,6 +108,7 @@ jobs:
           - name: Install LLVM ${{inputs.llvmMajor}}
             shell: bash
             run: |
+                cd llvm-project
                 cmake --install build --config MinSizeRel
 
           - name: Compress Product
