--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -56,7 +56,7 @@ jobs:
           - name: Compress Product
             shell: pwsh
             run: |
-                7z a llvm_windows_x64.7z .\install\*
+                7z a llvm_windows_x64.7z .\llvm-project\install\*
 
           - name: Upload Archive
             uses: actions/upload-artifact@v4
@@ -116,7 +116,7 @@ jobs:
           - name: Compress Product
             shell: pwsh
             run: |
-                7z a llvm_windows_arm64.7z .\install\*
+                7z a llvm_windows_arm64.7z .\llvm-project\install\*
 
           - name: Upload Archive
             uses: actions/upload-artifact@v4
