--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -54,7 +54,7 @@ jobs:
           - name: Compress Product
             shell: bash
             run: |
-                7z a llvm_linux_x64.7z .\llvm-project\install\*
+                7z a llvm_linux_x64.7z ./llvm-project/install/*
 
           - name: Upload Archive
             uses: actions/upload-artifact@v4
@@ -114,7 +114,7 @@ jobs:
           - name: Compress Product
             shell: bash
             run: |
-                7z a llvm_linux_arm64.7z .\llvm-project\install\*
+                7z a llvm_linux_arm64.7z ./llvm-project/install/*
 
           - name: Upload Archive
             uses: actions/upload-artifact@v4
