--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -67,13 +67,13 @@ jobs:
                 retention-days: 7
 
     arm64:
-        runs-on: windows-latest
+        runs-on: windows-11-arm
         steps:
 
           - name: Enable MSVC Toolchain Environment
             uses: ilammy/msvc-dev-cmd@v1
             with:
-                arch: amd64
+                arch: arm64
 
           - name: Install Ninja
             uses: llvm/actions/install-ninja@main
@@ -83,28 +83,11 @@ jobs:
             run: |
                 git clone https://github.com/llvm/llvm-project --depth 1 --branch release/${{inputs.llvmMajor}}.x
 
-          - name: Build Host (x64) Tblgen
-            shell: pwsh
-            run: |
-                cd llvm-project
-                cmake -S llvm -B build-host -G Ninja -DCMAKE_BUILD_TYPE=Release -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_ENABLE_PROJECTS="clang"
-                cmake --build build-host --target llvm-tblgen clang-tblgen llvm-min-tblgen llvm-config llvm-nm --config Release --parallel
-
-          - name: Reconfigure MSVC Toolchain Environment
-            uses: ilammy/msvc-dev-cmd@v1
-            with:
-                arch: amd64_arm64
-
           - name: Configure LLVM ${{inputs.llvmMajor}}
             shell: pwsh
             run: |
                 cd llvm-project
-                @'
-                set(CMAKE_SYSTEM_NAME Windows)
-                set(CMAKE_SYSTEM_PROCESSOR ARM64)
-                '@ | Out-File -Encoding ascii arm64-toolchain.cmake
-                $env:PATH = "$PWD/llvm-project/build-host/bin;$env:PATH"
-                cmake -S llvm -B build -G Ninja -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_TOOLCHAIN_FILE="$PWD/arm64-toolchain.cmake" -DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded -DCMAKE_INSTALL_PREFIX="$PWD/install" -DLLVM_ENABLE_PROJECTS="clang;lld" -DLLVM_ENABLE_TERMINFO=OFF -DLLVM_ENABLE_ZLIB=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_TOOLS=ON -DLLVM_INCLUDE_UTILS=OFF -DLLVM_OPTIMIZED_TABLEGEN=ON -DLLVM_TARGETS_TO_BUILD=AArch64 -DLLVM_INCLUDE_BENCHMARKS=OFF -DCMAKE_SYSTEM_PROCESSOR=ARM64 -DLLVM_NATIVE_TOOL_DIR="$PWD/build-host/bin" -DHAVE_NATIVE_LLVM_CONFIG=ON -DHAVE_NATIVE_LLVM_TABLEGEN=ON -DHAVE_NATIVE_CLANG_TABLEGEN=ON -DLLVM_TOOL_LLVM_NM_BUILD=OFF
+                cmake -S llvm -B build -G Ninja -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded -DCMAKE_INSTALL_PREFIX="$PWD/install" -DLLVM_ENABLE_PROJECTS="clang;lld" -DLLVM_ENABLE_TERMINFO=OFF -DLLVM_ENABLE_ZLIB=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_TOOLS=ON -DLLVM_INCLUDE_UTILS=OFF -DLLVM_OPTIMIZED_TABLEGEN=ON -DLLVM_TARGETS_TO_BUILD=AArch64 -DLLVM_INCLUDE_BENCHMARKS=OFF -DCMAKE_SYSTEM_PROCESSOR=ARM64
 
           - name: Build LLVM ${{inputs.llvmMajor}}
             shell: pwsh
