--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -65,32 +65,19 @@ jobs:
                 retention-days: 7
 
     arm64:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-24.04-arm
         steps:
-
-          - name: Update Toolchain
-            shell: bash
-            run: |
-                sudo apt-get update
-                sudo apt-get install -y ninja-build cmake build-essential gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
 
           - name: Checkout LLVM
             shell: bash
             run: |
                 git clone https://github.com/llvm/llvm-project --depth 1 --branch release/${{inputs.llvmMajor}}.x
 
-          - name: Build Host (x64) Tblgen
-            shell: bash
-            run: |
-                cd llvm-project
-                cmake -S llvm -B build-host -G Ninja -DCMAKE_BUILD_TYPE=Release -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_ENABLE_PROJECTS="clang" -DLLVM_OPTIMIZED_TABLEGEN=ON
-                cmake --build build-host --target llvm-tblgen clang-tblgen llvm-min-tblgen --config Release --parallel
-
           - name: Configure LLVM ${{inputs.llvmMajor}}
             shell: bash
             run: |
                 cd llvm-project
-                cmake -S llvm -B build -G Ninja -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_INSTALL_PREFIX="$PWD/install" -DCMAKE_SYSTEM_NAME=Linux -DCMAKE_SYSTEM_PROCESSOR=aarch64 -DLLVM_ENABLE_PROJECTS="clang;lld" -DLLVM_ENABLE_TERMINFO=OFF -DLLVM_ENABLE_ZLIB=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_TOOLS=ON -DLLVM_INCLUDE_UTILS=OFF -DLLVM_OPTIMIZED_TABLEGEN=ON -DLLVM_TARGETS_TO_BUILD=AArch64 -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_NATIVE_TOOL_DIR="$PWD/build-host/bin" -DLLVM_TABLEGEN="$PWD/build-host/bin/llvm-tblgen" -DCLANG_TABLEGEN="$PWD/build-host/bin/clang-tblgen" -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ -DCMAKE_TRY_COMPILE_TARGET_TYPE=STATIC_LIBRARY -DCROSS_TOOLCHAIN_FLAGS_NATIVE="-DCMAKE_C_COMPILER=/usr/bin/gcc;-DCMAKE_CXX_COMPILER=/usr/bin/g++" -DLLVM_ENABLE_LIBXML2=OFF -DCLANG_ENABLE_LIBXML2=OFF
+                cmake -S llvm -B build -G Ninja -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_INSTALL_PREFIX="$PWD/install" -DLLVM_ENABLE_PROJECTS="clang;lld" -DLLVM_ENABLE_TERMINFO=OFF -DLLVM_ENABLE_ZLIB=OFF -DLLVM_INCLUDE_DOCS=OFF -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_TOOLS=ON -DLLVM_INCLUDE_UTILS=OFF -DLLVM_OPTIMIZED_TABLEGEN=ON -DLLVM_TARGETS_TO_BUILD=AArch64 -DLLVM_INCLUDE_BENCHMARKS=OFF -DCMAKE_SYSTEM_NAME=Linux -DCMAKE_SYSTEM_PROCESSOR=aarch64
 
           - name: Build LLVM ${{inputs.llvmMajor}}
             shell: bash
