--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,20 +104,11 @@ jobs:
                 repository: ${{github.repository}}
                 run-id: ${{needs.build-linux.outputs.runid}}
 
-          - name: Download Artifact llvm_macos_x64
+          - name: Download Artifact llvm_macos
             uses: actions/download-artifact@v4
             with:
-                name: llvm_macos_x64
-                path: llvm_macos_x64
-                github-token: ${{github.token}}
-                repository: ${{github.repository}}
-                run-id: ${{needs.build-macos.outputs.runid}}
-
-          - name: Download Artifact llvm_macos_arm64
-            uses: actions/download-artifact@v4
-            with:
-                name: llvm_macos_arm64
-                path: llvm_macos_arm64
+                name: llvm_macos
+                path: llvm_macos
                 github-token: ${{github.token}}
                 repository: ${{github.repository}}
                 run-id: ${{needs.build-macos.outputs.runid}}
@@ -125,7 +116,7 @@ jobs:
           - name: Release Artifacts
             uses: ncipollo/release-action@v1.16.0
             with:
-                artifacts: llvm_windows_x64/llvm_windows_x64.7z, llvm_windows_arm64/llvm_windows_arm64.7z, llvm_linux_x64/llvm_linux_x64.7z, llvm_linux_arm64/llvm_linux_arm64.7z, llvm_macos_x64/llvm_macos_x64.7z, llvm_macos_arm64/llvm_macos_arm64.7z
+                artifacts: llvm_windows_x64/llvm_windows_x64.7z, llvm_windows_arm64/llvm_windows_arm64.7z, llvm_linux_x64/llvm_linux_x64.7z, llvm_linux_arm64/llvm_linux_arm64.7z, llvm_macos/llvm_macos.7z
                 commit: main
                 tag: ${{inputs.llvmMajor}}
                 body: Version ${{inputs.llvmMajor}}
